# logger

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: log.h
src/: main.cpp
tests/: CMakeLists.txt
